# 8004-atom

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
idl/: atom_engine.json
programs/atom-engine/: Cargo.toml
programs/atom-engine/src/: compute.rs  contexts.rs  events.rs  kani.rs  lib.rs  state.rs
scripts/: init-devnet.ts
tests/: atom-attack-vectors.ts  atom-engine-tests.ts  atom-entropy-backfire.ts  atom-functional-validation.ts  atom-griefing.ts  atom-hll-stuffing.ts  atom-intensive-scale.ts  atom-iron-dome.ts  atom-massive-scale.ts  atom-phantom-swarm.ts  atom-security-audit.ts  atom-stress-tests.ts  e2e-initialize-stats-guards.ts  init-localnet.ts
tests/utils/: helpers.ts
types/: agent_registry_8004.ts  atom_engine.ts
