[package]
name = "atom-engine"
version = "0.2.3"
description = "ATOM Engine - AI Agent Trust & Reputation Metrics for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "atom_engine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }


[dependencies]
anchor-lang = "0.31.1"
mpl-core = "0.11.1"

[dev-dependencies]
litesvm = "0.9"
solana-sdk = "2.0"
solana-program-test = "2.0"
